--- a/views/amp-item.pug
+++ b/views/amp-item.pug
@@ -15,6 +15,10 @@ html(amp)
       h1,p {
         padding: 18px;
       }
+      header {
+        background-color: #318e8599;
+      }
   body
-    h1 #{target.name} (AMP)
+    header
+      h1 #{target.name} (AMP)
     p #{target.name}は最高
