--- a/views/item.pug
+++ b/views/item.pug
@@ -9,6 +9,10 @@ html
       h1,p {
         padding: 18px;
       }
+      header {
+        background-color: #318e8599;
+      }
   body
-    h1= target.name
+    header
+      h1= target.name
     p #{target.name}は最高
