--- a/views/item.pug
+++ b/views/item.pug
@@ -4,8 +4,13 @@ html
     link(rel='ampHtml' href=target.ampUrl)
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width,minimum-scale=1,initial-scale=1')
+    link(href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,700" rel="stylesheet")
     title= "Signed HTTP Exchanges"
     style.
+      body {
+        font-family: "Roboto",sans-serif;
+        color: 333;
+      }
       h1,p {
         padding: 18px;
       }
