--- a/views/amp-item.pug
+++ b/views/amp-item.pug
@@ -3,6 +3,7 @@ html(amp)
   head
     script(src='https://cdn.ampproject.org/v0.js', async)
     link(rel='canonical' href=target.url)
+    link(href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,700" rel="stylesheet")
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width,minimum-scale=1,initial-scale=1')
     style(amp-boilerplate).
@@ -12,6 +13,10 @@ html(amp)
         body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
     title= "Signed HTTP Exchanges"
     style(amp-custom).
+      body {
+        font-family: "Roboto",sans-serif;
+        color: 333;
+      }
       h1,p {
         padding: 18px;
       }
