--- a/views/list.pug
+++ b/views/list.pug
@@ -52,6 +52,6 @@ html(amp)
     p(class="message") Run this command to accept self signed certificate for the demo.
       br
       span(class="background") open -a Google\ Chrome\ Canary --args --ignore-certificate-errors-spki-list=qj57iAwMZqpUnOrMO+6chyDZqD9ZgcRGgsd6FBhgi1U=
-    p(class="message") You need to set "AMP-Cache-Transform: google" as a request header to see sxg response. Please use local proxy, or 
+    p(class="message") You need to set "AMP-Cache-Transform: google" as a request header to see sxg response. Please use some local proxy, or 
       a(href="https://mod-header.appspot.com/" target="_blank") ModHeader
       span  which is a useful Chrome extension.
